--- a/blant-center/Dockerfile
+++ b/blant-center/Dockerfile
@@ -1,6 +1,6 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 VOLUME /tmp
-ADD blant-center-0.0.1-SNAPSHOT.jar app.jar
+ADD blant-center.jar app.jar
 #RUN bash -c 'touch /app.jar'
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 EXPOSE 8761
